# eternity-rl

./: .gitignore  README.md  flake.nix  instantiate.py  justfile  main.py  pyproject.toml  requirements.txt  shell.nix
configs/: complet.yaml  default.yaml  eternity_E.yaml  hard.yaml  normal.yaml  normal_ddp.yaml  trivial.yaml  trivial_B.yaml
configs/env/: complet.yaml  hard.yaml  normal.yaml  trivial.yaml  trivial_B.yaml
configs/exp/: B.yaml  hard.yaml  normal.yaml  trivial.yaml  trivial_B.yaml
configs/mcts/: default.yaml
configs/model/: big.yaml  huge.yaml  medium.yaml  small.yaml
configs/ppo/: default.yaml
eternity-doc/: AlphaGo.md  AlphaZero.md  How to use.md  Pretraining Using Generated Data.md  TODO.md  how-to.norg  ideas.norg  random.norg  sweep-logs.norg  todo.norg
eternity-doc/.obsidian/: workspace.json
features/: pierrotLasticot.feature
features/steps/: pierrotLasticot.py
instances/: eternity_A.txt  eternity_B.txt  eternity_C.txt  eternity_D.txt  eternity_E.txt  eternity_complet.txt  eternity_trivial_A.txt  eternity_trivial_B.txt
notes/: 4x4.norg  random.norg  todo.norg
src/: batched_reinforce.py  model.py  monte_carlo.py  reinforce.py  sampling.py  test_reinforce.py  trainer.py
src/environment/: __init__.py  batched_gym.py  constants.py  data_generation.py  draw.py  generate.py  gym.py  test_env.py
src/mcts/: __init__.py  config.py  loss.py  soft.py  test_mcts.py  trainer.py  tree.py
src/model/: __init__.py  backbone.py  class_encoding.py  critic.py  decoder.py  g_cnn.py  gnn.py  head.py  heads.py  integer_encoding.py  model.py  policy.py  test_equivariance.py  test_model.py  time_encoding.py  transformer.py
src/monte_carlo/: __init__.py  monte_carlo.py  test_mtcs.py
src/policy_gradient/: __init__.py  loss.py  rollout.py  test_policy_gradient.py  trainer.py
src/reinforce/: __init__.py  batched_reinforce.py  loss.py  reinforce.py  rollout.py  rollout_buffer.py  test_reinforce.py
src/rollouts/: __init__.py  (+2 more)
sweeps/: sweep-1.yaml  sweep-2.yaml  sweep-3.1.yaml  sweep-3.2.yaml  sweep-3.yaml  sweep-4.yaml  sweep-5.1.yaml  sweep-5.2.yaml  sweep-5.yaml  sweep-6.1.yaml  sweep-6.yaml  sweep-7.yaml  sweep-8.yaml  sweep-memories.yaml  sweep-model-size.yaml
(+21 files in other folders)
