[tool.poetry]
name = "eternity-rl"
version = "0.1.0"
description = "Learn to play the Eternity game using RL."
authors = ["Pierrot LeCon <pstmrtem@outlook.com>"]
readme = "README.md"
packages = [{include = "eternity_rl"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
einops = "^0.6.1"
gymnasium = "^0.28.1"
wandb = "^0.15.0"
matplotlib = "^3.7.1"
hydra-core = "^1.3.2"
torchinfo = "^1.7.2"
tqdm = "^4.65.0"
positional-encodings = {extras = ["pytorch"], version = "^6.0.1"}
torch-optimizer = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
