
[project]
name = "eternity-rl"
version = "0.1.0"
description = "Learn to play the Eternity game using RL."
authors = [
    {name = "Pierrot LC", email = "pstmrtem@outlook.com"},
]
dependencies = [
    "torch>=2.0.1",
    "einops>=0.6.1",
    "gymnasium>=0.28.1",
    "wandb>=0.15.3",
    "matplotlib>=3.7.1",
    "hydra-core>=1.3.2",
    "torchinfo>=1.8.0",
    "tqdm>=4.65.0",
    "positional-encodings[pytorch]>=6.0.1",
    "torch-optimizer>=0.3.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.3.1",
]
