
[project]
name = "eternity-rl"
version = "1.0.0"
description = "Learn to play the Eternity game using RL."
authors = [
    {name = "Pierrot LC", email = "pstmrtem@outlook.com"},
]
dependencies = [
    "einops>=0.6.1",
    "gymnasium>=0.28.1",
    "hydra-core>=1.3.2",
    "imageio>=2.31.3",
    "matplotlib>=3.7.1",
    "positional-encodings[pytorch]>=6.0.1",
    "pytorch-optimizer>=2.11.1",
    "torch>=2.0.1",
    "torchinfo>=1.8.0",
    "torchrl>=0.1.1",
    "tqdm>=4.65.0",
    "wandb>=0.15.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.3.1, <=8.0.2",
]

[tool.ruff]
src = ["src"]
